fix: invisible mark on win

--- a/scss/components/_game.scss
+++ b/scss/components/_game.scss
@@ -59,12 +59,12 @@
     }
 
     &--x-win {
-      background-image: url('../../assets/icon-x-outline.svg');
+      background-image: url('../../assets/icon-x--light.svg');
       background-color: var.$light-blue;
     }
 
     &--o-win {
-      background-image: url('../../assets/icon-o-outline.svg');
+      background-image: url('../../assets/icon-o--light.svg');
       background-color: var.$light-yellow;
     }
   }
